--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@turf/turf": "^7.0.0",
+    "i": "^0.3.7",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "npm": "^10.8.2",
+    "papaparse": "^5.4.1",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1"
