--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
     "@turf/turf": "^7.0.0",
     "i": "^0.3.7",
     "leaflet": "^1.9.4",
@@ -22,7 +24,8 @@
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
